--- a/index.html
+++ b/index.html
@@ -11,62 +11,25 @@
 </head>
 
 <body>
-    <button class="b-1">Hello World</button>
-    <button class="b-2">Hello World</button>
+    <!-- <button class="b-1">Hello World</button>
+    <button class="b-2">Hello World</button> -->
 
     <!-- <button class="btn">Hello</button>
     <label for="id-od">Початкове значенння</label>
     <input id="id-od" type="number" value="0">
     <label for="id-do">Кінцеве значенння</label>
     <input id="id-do" type="number"> -->
+    <script src="js/main.js"></script>
+    <!-- 
 
-
-
-    <form class="form1" action="">
-        <input type="text" name="name">
-        <input type="text" name="age">
-        <button>Submit</button>
-        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-        <label for="vehicle1"> I have a bike</label><br>
-        <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-        <label for="vehicle2"> I have a car</label><br>
-        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-        <label for="vehicle3"> I have a boat</label><br>
-    </form>
-
-    <form class="form2" action="">
-        <input type="text" name="name">
-        <input type="text" name="age">
-        <button>Submit</button>
-        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-        <label for="vehicle1"> I have a bike</label><br>
-        <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-        <label for="vehicle2"> I have a car</label><br>
-        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-        <label for="vehicle3"> I have a boat</label><br>
-    </form>
-
-
-    <div class="show-info">
-        <!-- 
-            <div class="show-info__card">
-            <p class="show-info__user-id">1</p>
-            <p class="show-info__id">1</p>
-            <p class="show-info__title">delectus aut autem</p>
-            <p class="show-info__completed">false</p>
-        </div>
-      -->
-    </div>
-
-
-
+    
 
 
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <!-- <script src="js/main.js"></script> -->
-    <!-- <script src="js/windows_location.js"></script> -->
-    <script src="js/asyncAwait.js"></script>
+   
+    <script src="js/windows_location.js"></script> -->
+    <!-- <script src="js/asyncAwait.js"></script> -->
 
     <!-- <script src="js/bindCallApplay.js"></script> -->
 
