--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input id="id-od" type="number" value="0">
     <label for="id-do">Кінцеве значенння</label>
     <input id="id-do" type="number"> -->
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
     <!-- 
 
     
@@ -38,6 +38,10 @@
     <!-- <script src="js/formData.js"></script> -->
 
     <!-- <script src="js/AJAX.js"></script> -->
+    <!-- <script src="js/AJAX_1.js"></script> -->
+    <script src="js/destructuring.js"></script>
+
+
     <!-- <script src="js/objecttest.js"></script> -->
 </body>
 
